# simple_server

./: CMakeLists.txt  README  autogen.sh
conf/: server.properties
include/: AsyncChannelEx.h  ErrorCode.h  LogWrapper.h  MsgEventArgs.h  Serializer.h  SrvFramework.h  SrvHandler.h  common.h
proto/: ReqRsp.proto
src/: AsyncChannelEx.cpp  CMakeLists.txt  LogWrapper.cpp  MsgEventArgs.cpp  SimpleServer.cpp  SrvFramework.cpp  SrvHandler.cpp  testClient.cpp
